[package]
name = "musket"
version = "0.14.0"
edition = "2021"
repository = "https://github.com/isfegu/musket"
description = "Musket is a command line interface to send a URL to several destinations."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/musket"
keywords = ["ssmm", "cli", "bookmarks", "turso", "linkedin"]
categories = ["command-line-utilities"]

[[bin]]
name = "musket"
path = "src/bin.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
confy = "0.6.1"
libsql = "0.6.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.216"
serde_json = "1.0.133"
tokio = "1.42.0"
