[package]
name = "musket"
version = "0.21.0"
edition = "2021"
repository = "https://github.com/isfegu/musket"
description = "Musket is a command line interface to send a URL to several destinations."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/musket"
keywords = ["cli", "bluesky", "mastodon", "linkedin", "turso"]
categories = ["command-line-utilities"]

[[bin]]
name = "musket"
path = "src/bin.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
bsky-sdk = "0.1.14"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
confy = "0.6.1"
libsql = "0.6.0"
megalodon = "1.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.clippy]
pedantic = "warn" 
