[package]
name = "musket"
version = "0.23.0"
edition = "2021"
repository = "https://github.com/isfegu/musket"
description = "Musket is a command line interface to send a URL to several destinations."
license = "MIT"
authors = ["isfegu"]
readme = "README.md"
homepage = "https://github.com/isfegu/musket"
keywords = ["cli", "bluesky", "mastodon", "linkedin", "turso"]
categories = ["command-line-utilities"]

[[bin]]
name = "musket"
path = "src/bin.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
bsky-sdk = "0.1.18"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
confy = "0.6.1"
libsql = "0.9.5"
megalodon = "1.0.0"
oauth1 = "1.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.clippy]
pedantic = "warn" 

[profile.release]
incremental = false
codegen-units = 1
lto = "thin"
strip = "symbols"
